app/assets/stylesheets/views/api.scss
.api-notifications {

  font-family: monospace;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border-bottom: 1px solid $govuk-border-colour;

  &-item {

    border-top: 1px solid $govuk-border-colour;
    padding: 10px 0 0 0;

    // We can't assign classes to the summary.govuk-details__summary or div.govuk-details__text
    // elements so we have to target them as children of details.api-notifications-item
    // This will result in selectors like .api-notifications-item > .govuk-details__summary
    > .govuk-details__summary,
    > .govuk-details__text {
      font-family: monospace;
    }
    // override underline styling as in our case, where we have additional content in the
    // details summray text, the link underline appears in the gap when the link wraps
    // only apply that for non-legacy browser, like Design System does
    .govuk-details__summary-text {
      @supports not (-ms-ime-align:auto) {
        text-decoration: none;
        .api-notifications-item__recipient {
          @include govuk-link-decoration;
        }
      }
    }

    > .govuk-details__summary {
      display: block;
      margin-bottom: govuk-spacing(3);
      width: auto;

      &::before {
        top: -1.3em;
      }
      // stretch focus style to fill containing row
      &:focus {
        box-shadow: 0 -10px $govuk-focus-colour, 0 11px $govuk-focus-colour, 0 15px $govuk-focus-text-colour;
        // don't show underline if focused
        @supports not (-ms-ime-align:auto) {
          .api-notifications-item__recipient {
            text-decoration: none;
          }
        }
      }
      // apply underline to the child element when parent focussed
      &:hover .api-notifications-item__recipient {
        @supports not (-ms-ime-align:auto) {
          @include govuk-link-hover-decoration;
        }
      }
    }
    
    &__recipient {
      overflow-wrap: anywhere;
    }

    &__meta {

      display: block;
      color: $govuk-secondary-text-colour;
      text-decoration: none;

      &-key,
      &-time {
        color: $govuk-secondary-text-colour;
        display: inline-block;
        width: auto;
      }

      @include govuk-media-query($from: tablet) {
        &-key,
        &-time {
          width: 50%;
        }

        &-time {
          text-align: right;
        }
      }

    }


    // We can't assign classes to the div.govuk-details__text element so we have to target it as a
    // child of details.api-notifications-item instead
    // This will result in .api-notifications-item > .govuk-details__text
    > .govuk-details__text {

      border-left: none;
      padding-left: 25px;
      padding-top: 0;

    }

    &__data-name {
      color: $govuk-secondary-text-colour;
    }

    &__data-value {
      color: $govuk-text-colour;
      padding-bottom: 15px;
    }

  }

}

